--- a/index.html
+++ b/index.html
@@ -103,10 +103,180 @@
         <h6>03</h6>
       </div>
     </div>
-
   </div>
   </div>
 </section>
+
+<section id="challanges">
+  <div id="challanges-row" class="row">
+  <div class="col-8">
+    <div id="challanges-heading">
+      <h2>Popular Challenges</h2>
+    </div>
+    <div id="challanges-heading-1">
+      <div class="row">
+        <div id="mask-01" class="col-6">
+          <img id="mask-1" src="images\Mask_1.png" alt="">
+        </div>
+        <div class="col-6 skills-content">
+          <h6 class="keyskills1">Key Skills</h6>
+          <h4 class="skillname1">Friction-Based Fire Making</h4>
+          <p class="Quis1">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
+            <div class="skills-toggle-1">
+              <img id="cross-1" src="images\+.png" alt="">
+              <h6>Find Out More</h6>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div id="challanges-heading-2">
+      <div class="row">
+        <div id="mask-02" class="col-6">
+          <img id="mask-2" src="images\Mask_2.png" alt="">
+        </div>
+
+        <div class="col-6 skills-content">
+          <h6 class="keyskills2" >Key Skills</h6>
+          <h4 class="skillname2" >Friction-Based Fire Making</h4>
+          <p class="Quis2">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
+            <div class="skills-toggle-2">
+              <img id="cross-2" src="images\+.png" alt="">
+              <h6>Find Out More</h6>
+            </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="challanges-heading-3">
+
+      <div class="row">
+
+        <div id="mask-03" class="col-6">
+          <img id="mask-3" src="images\Mask_3.png" alt="">
+        </div>
+
+        <div class="col-6 skills-content">
+          <h6 class="keyskills3" >Key Skills</h6>
+          <h4 class="skillname3" >Friction-Based Fire Making</h4>
+          <p class="Quis3">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem.</p>
+            <div class="skills-toggle-3">
+              <img id="cross-3" src="images\+.png" alt="">
+              <h6>Find Out More</h6>
+            </div>
+        </div>
+
+      </div>
+    </div>
+    
+  </div>
+
+  <div id="mission-container" class="col-4">
+    <div class="mission">
+      <div class="mission-heading">
+        <h4>01</h4>
+        <h1>endur<br>ance</h1>
+          <div class="rotated-text">
+          <h4>challanges</h4>
+          </div>
+      </div>
+      <div id="mission-content">
+        <div class="mission-image">
+          <img src="images\img_shoes.png" alt="">
+        </div>
+        <div class="mission-text">
+          <h3>Mission</h3>
+          <h4>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy tempor.</h4>
+          <h6>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</h6>
+        </div>
+    </div>
+      
+    </div>
+    <div class="mission-toggle" id="mission-toggle-id">
+      <img id="mission-cross" src="images\+.png" alt="">
+      <h6>Find Out More</h6>
+    </div>
+  </div>
+</div>
+</section>
+
+<section id="results">
+  <div class="results-section">
+    <div class="row">
+        <div class="col-3">
+            <div class="row">
+              <div class="col-8" id="callenges-text">
+                <div >
+                <h4>completed challenges</h4>
+                <h1>13</h1>
+                <h2 id="challenges-hidden-id">You have<br><span>78%</span> chance<br>for survival</h2>
+              </div>
+                <div class="challenges-toggle" id="challenges-toggle-id">
+                  <img id="challenges-cross" src="images\+.png" alt="">
+                  <h6>See More</h6>
+                </div>
+              </div>
+              <div class="col-4" id="results-htext">
+                <h2>your results</h2>
+                <img src="images\ico_art_right.png" alt="">
+              </div>
+            </div>
+        </div>
+        <div class="col-9" id="results-sharing">
+          <div class="results-bgimg">
+            <img src="images\Mask Group 2.png" alt="">
+            <div class="results-sharingonline">
+              <div class="sharing-hidden">
+              <h1>share your<br>results on social<br>media</h1>
+              <h4>Lorem ipsum dolor sit amet,<br>consetetur diam nonumy<br>tempor.</h4>
+            </div>
+              <div class="socialm-sharing-toggle" id="socialm-sharing-toggle-id">
+                <img id="socialm-sharing-cross" src="images\+.png" alt="">
+                <h6>see results from your friends</h6>
+            </div>
+          </div>
+          </div>
+    </div>
+  </div>
+</section>
+
+<section id="advice-section">
+  <div class="row">
+    <div class="col-2" id="adviceh">
+      <h1>advice</h1>
+    </div>
+    <div class="col-10">
+      <div class="heading1-image">
+        <div id="carousel2Controls" class="carousel slide" data-ride="carousel" data-wrap="false" data-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item item active">
+              <img src="images\Mask Group 4.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item item ">
+              <img src="images\Mask Group 4.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item item ">
+              <img src="images\Mask Group 4.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <div class="carouselcontrolprev"><a href="#carousel2Controls" role="button" data-slide="prev">
+            <span><div class="prev-icon prev"><img id="previcon" src="images\btn_prev_passive.png" alt=""></div></span>
+            <!-- <span class="sr-only">Previous</span> -->
+          </a></div>
+          <div class="carouselcontrolnext"><a href="#carousel2Controls" role="button" data-slide="next">
+            <span><div class="next-icon next"><img src="images\btn_next_ACTIVE.png" alt=""></div></span>
+            <!-- <span class="sr-only">Next</span> -->
+          </a></div>
+          <div class="carousel-num">
+            <div class="num"></div>
+            <div class="tnum"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js\script.js"></script>
 </body>
 
