Gallery section implemented

--- a/index.html
+++ b/index.html
@@ -267,6 +267,14 @@
             <span><div class="next-icon next"><img src="images\btn_next_ACTIVE.png" alt=""></div></span>
             <!-- <span class="sr-only">Next</span> -->
           </a></div>
+          <div class="mode-text">
+            <h3>survival mode</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+            <div class="mode-toggle" id="mode-toggle-id">
+              <img id="mode-cross" src="images\+.png" alt="">
+              <h6>More</h6>
+            </div>
+          </div>
           <div class="carousel-num">
             <div class="num"></div>
             <div class="tnum"></div>
@@ -275,6 +283,88 @@
       </div>
     </div>
   </div>
+</section>
+
+<section id="gallery">
+<div class="row">
+  <div class="col-4">
+    <div class="tent-img">
+    <img src="images\Mask Group 6.png" alt="">
+    <div class="yt-icon"><img src="images\ico_youtube_w.png" alt=""></div>
+    </div>
+  </div>
+
+  <div class="col-4">
+    <div class="kettle-img">
+    <img src="images\img.png" alt="">
+    <div class="ga-icon"><img src="images\pictures.png" alt=""></div>
+    </div>
+  </div>
+
+  <div class="col-4">
+  <div class="ga-content">
+    <h2>GALLERY</h2>
+    <div class="fvr"><h5>Foto & Video</h5></div>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+  </div>
+  <div class="ga-toggle" id="ga-toggle-id">
+    <img id="ga-cross" src="images\+.png" alt="">
+    <h6>More</h6>
+  </div>
+  </div>
+
+
+</div>
+</section>
+
+<section id="footer">
+<div class="footer">
+  <div class="inner-footer">
+
+    <div class="footer-items">
+      <img src="images\logo.png" alt="">
+    </div>
+
+    <div class="footer-items">
+      <h2>Challenges</h2>
+      <ul>
+        <a href=""><li>Endurance</li></a>
+        <a href=""><li>Survival</li></a>
+        <a href=""><li>Key skills</li></a>
+        <a href=""><li>Survival kit</li></a>
+        <a href=""><li>Shelter Making</li></a>
+        <a href=""><li>Food Challenges</li></a>
+      </ul>
+      <hr>
+      <div class="socialmedia-icons">
+        <a href=""><img src="images\ico_facebook.png" alt=""></a>
+        <a href=""><img src="images\ico_twitter.png" alt=""></a>
+        <a href=""><img src="images\ico_youtube_w.png" alt=""></a>
+      </div>
+    </div>
+
+    <div class="footer-items">
+      <h2>Advices</h2>
+      <ul>
+        <a href=""><li>Mountain survival</li></a>
+        <a href=""><li>Forest challenges</li></a>
+        <a href=""><li>How to make your shelter</li></a>
+        <a href=""><li>What to eat in forest</li></a>
+        <a href=""><li>How to stay safe</li></a>
+        <a href=""><li>What to wear</li></a>
+      </ul>
+    </div>
+
+    <div class="footer-items">
+      <h2>Gallery</h2>
+      <ul>
+        <a href=""><li>Foto gallery</li></a>
+        <a href=""><li>Video gallery</li></a>
+      </ul>
+    </div>
+    
+  </div>
+</div>
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js\script.js"></script>
