Footer section completed
The static website is done without responsiveness.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Survival</title>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Noto+Sans+JP&family=Teko&display=swap" rel="stylesheet">
   <!-- CSS only -->
@@ -321,11 +322,11 @@
 <div class="footer">
   <div class="inner-footer">
 
-    <div class="footer-items">
-      <img src="images\logo.png" alt="">
+    <div class="footer-item">
+      <img src="images\logo_w.png" alt="">
     </div>
 
-    <div class="footer-items">
+    <div class="footer-item-1">
       <h2>Challenges</h2>
       <ul>
         <a href=""><li>Endurance</li></a>
@@ -337,13 +338,13 @@
       </ul>
       <hr>
       <div class="socialmedia-icons">
-        <a href=""><img src="images\ico_facebook.png" alt=""></a>
-        <a href=""><img src="images\ico_twitter.png" alt=""></a>
+        <a href=""><img src="images\ico_facebook_w.png" alt=""></a>
+        <a href=""><img src="images\ico_twitter_w.png" alt=""></a>
         <a href=""><img src="images\ico_youtube_w.png" alt=""></a>
       </div>
     </div>
 
-    <div class="footer-items">
+    <div class="footer-item-2">
       <h2>Advices</h2>
       <ul>
         <a href=""><li>Mountain survival</li></a>
@@ -355,7 +356,7 @@
       </ul>
     </div>
 
-    <div class="footer-items">
+    <div class="footer-item-3">
       <h2>Gallery</h2>
       <ul>
         <a href=""><li>Foto gallery</li></a>
